Fix the service for production
- Update API to meet SolidCouch expectations
- Remove unnecessary dependencies
- Fix and update API docs
- Remove unnecessary workflow step
- Improve type
- Update documentation and license attribution
